tree-sitter-hop/test/corpus/expressions.txt
================================================================================
binary operator precedence
================================================================================

fn f() -> Bool {
  a || b && c == d + e * g
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (binary_expression
        (identifier)
        (binary_expression
          (identifier)
          (binary_expression
            (identifier)
            (binary_expression
              (identifier)
              (binary_expression
                (identifier)
                (identifier)))))))))

================================================================================
unary and postfix chains bind tighter than arithmetic
================================================================================

fn f() -> Int {
  -a.b().c + x!(1)
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (binary_expression
        (unary_expression
          (field_expression
            (call_expression
              (field_expression
                (identifier)
                (field_identifier))
              (arguments))
            (field_identifier)))
        (macro_invocation
          (identifier)
          (arguments
            (integer_literal)))))))

================================================================================
match subject is not a record literal when the block holds arms
================================================================================

fn f() -> Int {
  match Color::Red { Color::Red => 1, _ => 0 }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (match_expression
        (scoped_identifier
          (type_identifier)
          (type_identifier))
        (match_block
          (match_arm
            (scoped_identifier
              (type_identifier)
              (type_identifier))
            (integer_literal))
          (match_arm
            (wildcard_pattern)
            (integer_literal)))))))

================================================================================
match subject is a record literal when the block holds fields
================================================================================

fn f() -> Int {
  match Point { x: 1 } { _ => 0 }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (match_expression
        (record_literal
          (type_identifier)
          (field_initializer_list
            (field_initializer
              (field_identifier)
              (integer_literal))))
        (match_block
          (match_arm
            (wildcard_pattern)
            (integer_literal)))))))

================================================================================
for over a range, and record literal with spread
================================================================================

fn f() -> Int {
  for _ in 1..=n { Point { ...base, x: 1 } }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (for_expression
        (wildcard_pattern)
        (range_expression
          (integer_literal)
          (identifier))
        (block
          (record_literal
            (type_identifier)
            (field_initializer_list
              (spread_element
                (identifier))
              (field_initializer
                (field_identifier)
                (integer_literal)))))))))

================================================================================
named call arguments and array literal
================================================================================

fn f() -> Int {
  label(count: 2, prefix: "n\"q")
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (call_expression
        (identifier)
        (arguments
          (named_argument
            (identifier)
            (integer_literal))
          (named_argument
            (identifier)
            (string_literal
              (string_content)
              (escape_sequence)
              (string_content))))))))

================================================================================
tuple expressions and a parenthesized expression
================================================================================

fn f() -> Int {
  let a = ();
  let b = (1,);
  let c = (1, "two",);
  let d = ((1, 2), (x));
  0
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (let_statement
        (identifier)
        (tuple_expression))
      (let_statement
        (identifier)
        (tuple_expression
          (integer_literal)))
      (let_statement
        (identifier)
        (tuple_expression
          (integer_literal)
          (string_literal
            (string_content))))
      (let_statement
        (identifier)
        (tuple_expression
          (tuple_expression
            (integer_literal)
            (integer_literal))
          (parenthesized_expression
            (identifier))))
      (integer_literal))))

================================================================================
match on a tuple expression with tuple patterns
================================================================================

fn f() -> Int {
  match (a, b) { (true, Some((x,))) => x, ((_), ()) => 0 }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (match_expression
        (tuple_expression
          (identifier)
          (identifier))
        (match_block
          (match_arm
            (tuple_pattern
              (boolean_literal)
              (variant_pattern
                (type_identifier)
                (tuple_pattern
                  (identifier))))
            (identifier))
          (match_arm
            (tuple_pattern
              (tuple_pattern
                (wildcard_pattern))
              (tuple_pattern))
            (integer_literal)))))))
