tree-sitter-hop/test/corpus/markup.txt
================================================================================
elements, components, void elements and fragments
================================================================================

fn f() -> Html {
  <div>
    <br></br>
    <img src="a"/>
    <Card/>
    <>frag</>
  </div>
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (element
        (start_tag
          (tag_name))
        (text)
        (element
          (start_tag
            (tag_name))
          (end_tag
            (tag_name)))
        (text)
        (element
          (self_closing_tag
            (tag_name)
            (attribute
              (attribute_name)
              (string_literal
                (string_content)))))
        (text)
        (element
          (self_closing_tag
            (component_name)))
        (text)
        (fragment
          (fragment_start)
          (text)
          (fragment_end))
        (text)
        (end_tag
          (tag_name))))))

================================================================================
attributes: quoted, valueless, spread and interpolated
================================================================================

fn f() -> Html {
  <div class="a b" data-x aria:label="c" ...attrs id={user.name}></div>
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (element
        (start_tag
          (tag_name)
          (attribute
            (attribute_name)
            (string_literal
              (string_content)))
          (attribute
            (attribute_name))
          (attribute
            (attribute_name)
            (string_literal
              (string_content)))
          (spread_attribute
            (identifier))
          (attribute
            (attribute_name)
            (interpolation
              (field_expression
                (identifier)
                (field_identifier)))))
        (end_tag
          (tag_name))))))

================================================================================
quoted attribute values are string literals with escape sequences
================================================================================

fn f() -> Html {
  <span title="say \"hi\"" class="a\\" id=""></span>
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (element
        (start_tag
          (tag_name)
          (attribute
            (attribute_name)
            (string_literal
              (string_content)
              (escape_sequence)
              (string_content)
              (escape_sequence)))
          (attribute
            (attribute_name)
            (string_literal
              (string_content)
              (escape_sequence)))
          (attribute
            (attribute_name)
            (string_literal)))
        (end_tag
          (tag_name))))))

================================================================================
text keeps greater-than and apostrophes, and markup comments
================================================================================

fn f() -> Html {
  <p>it's x > y <!-- a-b -- c --></p>
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (element
        (start_tag
          (tag_name))
        (text)
        (markup_comment)
        (end_tag
          (tag_name))))))

================================================================================
interpolation may hold statements
================================================================================

fn f() -> Html {
  <div>{let x = 1; x}</div>
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (element
        (start_tag
          (tag_name))
        (interpolation
          (let_statement
            (identifier)
            (integer_literal))
          (identifier))
        (end_tag
          (tag_name))))))

================================================================================
permissive: closing tag need not match the opening tag
================================================================================

fn f() -> Html {
  <div></span>
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (element
        (start_tag
          (tag_name))
        (end_tag
          (tag_name))))))

================================================================================
script with no content
================================================================================

fn f() -> Html {
  <script src="a.js"></script>
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (element
        (start_tag
          (tag_name)
          (attribute
            (attribute_name)
            (string_literal
              (string_content))))
        (end_tag
          (tag_name))))))

================================================================================
text may be a lone slash
================================================================================

fn f() -> Html {
  <p>/</p>
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))))

================================================================================
text may begin with two slashes
================================================================================

fn f() -> Html {
  // a comment
  <p>// not a comment <b>x</b></p>
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (comment)
      (element
        (start_tag
          (tag_name))
        (text)
        (element
          (start_tag
            (tag_name))
          (text)
          (end_tag
            (tag_name)))
        (end_tag
          (tag_name))))))
